anneal/tests/fixtures/raw_ptr_dst_layout/expected.stderr
  × Tactic `rfl` failed: The left-hand side
  │   test_slice slice
  │ is not definitionally equal to the right-hand side
  │   fun ret_ => ↑ret_.2 ∣ ↑ret_.1
  │ 
  │ slice : ConstRawPtr (Slice U8)
  │ ⊢ test_slice slice ⦃ ret_ => ↑ret_.2 ∣ ↑ret_.1 ⦄
    ╭─[[PROJECT_ROOT]/src/lib.rs:22:7]
 21 │ ///   Aeneas.Std.WP.spec (test_slice slice) (fun ret_ => ret_.2.val ∣ ret_.1.val) := by
 22 │ ///   rfl
    ·       ─┬─
    ·        ╰── here
 23 │ /// ```
    ╰────

[External Info] generated/RawPtrDstLayoutRawPtrDstLayout7ea196091b7c9821/RawPtrDstLayoutRawPtrDstLayout7ea196091b7c9821.lean: spec ?m.4 : test_slice ?m.4 ⦃ ret_ => ↑ret_.2 ∣ ↑ret_.1 ⦄
Error: Lean verification failed. Consider running `cargo anneal generate`, iterating on generated `.lean` files, and copying results back to `.rs` files.
